tests/NormalTests/paczka1/fuzzy1/86110513.err
Error in line 3: D7pkcklAau A938 4,1
Error in line 1: yLWKLmLoSP S590 86,5
Error in line 13: IFOKsfD95 A938 19,54
Error in line 23: A261 S590 0,1
